fixed up blog section

--- a/_data/site.yml
+++ b/_data/site.yml
@@ -2,11 +2,10 @@ tel: "15142939962"
 tel_display: "514 293 9962"
 
 seo:
-  tagline: "Christopher Malanchen is an Editor for Film and Televison, based in
-    Toronto, Ontario, Canada."
+  tagline: "StillWaves is a Toronto based post-punk band featuring Daniel Carlyle."
         
 location:
-  description: "Based in"
+  description: "StillWaves is a Toronto based post-punk band featuring Daniel Carlyle"
   city: "Toronto"
   region: "Ontario"
   country: "Canada"
@@ -14,22 +13,15 @@ location:
 front_page_video: '<div style="padding:55.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/346738342?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>'
 
 
-bio_description: "<p>I am a professional film and television editor based in
-  Toronto, Canada. My background is in the fine arts: drawing and painting. I
-  explored my passion for filmmaking while attending art school and discovered
-  my favorite role was editing. </p><p>As a resident editor at the Canadian Film
-  Centre, I had the opportunity to further develop my storytelling skills and
-  concentrate on scripted narrative filmmaking. I collaborated with talented
-  directors from across Canada making high caliber films, representing diverse
-  experiences and voices.</p><p>As a freelance editor I work in several genres,
-  including documentaries, short films, comedy, scripted narrative television
-  and factual television. I gained important edit room experience working on
-  premium projects, including Big Little Lies (Season 2), The Art of More,
-  Pillars of the Earth and The Weekend Sailor.</p><p>My editing work has been
-  screened at numerous film festivals internationally such as TIFF, FIFA
-  Montreal, DOC LA and Madrid International Film Festival and is broadcast on
-  the Discovery Channel, Cooking Channel, History Channel, Netflix, SyFy, CBC,
-  Vice and Sony Entertainment. </p>"
+bio_description: "<p>StillWaves formed from a mutual love and admiration of post-punk heavyweights like Killing Joke, The Sound and The Chameleons. Daniel Carlyle and Eric Pentz had met various hazy nights in Toronto, and eventually came together and began writing and crafting their sound.
+
+After several months of writing and rehearsing, they took a chance, sending some poorly recorded demos to local producer/musician and recording guru Josh Korody, and he liked it enough to record their first album. Recorded and Produced by Korody and mastered by Jesse Keeler (Death from Above/Mstrkrft), The album tentatively titled, 'Regressing Times,' also features drums by Mike Wallace (Preoccupations).
+
+Carlyle's vocals and the themes of the songs focus on topics like the (often) sombre state of the world, past scorned love, and the inherent inequalities of the world. Dark music, for dark times indeed. Restless souls make restless music.
+
+Daniel Carlyle – Vocals, Bass, Keyboards, Sampler/Programming
+
+Eric Pentz – Guitar, Keyboards </p>"
 
 bio_accomplishments: "
                 <li>2019, Measure, (TIFF) Toronto International Film Festival, Nominee best Canadian Short Film</li>
